--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3125,10 +3125,17 @@ footer{
     font-weight: 500;
     letter-spacing: 2px;
     font-size: 2rem;
+    text-align: center;
+    width: 90%;
 }
 @media(max-width:1100px){
     .category-banner{
         width: 100%;}
+}
+@media(max-width:724px){
+    
+.category-banner h1{
+    font-size: 1.4rem;}
 }
 /*--blog--------------------------*/
 #blog{
@@ -3727,3 +3734,212 @@ footer{
 }
 
 }
+
+.all-news-container{
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: 1fr;
+}
+.all-news-container .product-box{
+    display: grid;
+    grid-template-columns: 180px 1fr;
+    grid-gap: 20px;
+    padding: 5px;
+}
+.all-news-container .product-img{
+    background-color: #f1f1f1;
+    padding: 5px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+.all-news-container .product-text span{
+    color: #949494;
+    font-size: 0.89rem;
+}
+.all-news-container .product-text .product-text-read{
+    color: var(--second-main-color);
+    margin-top: 8px;
+    font-size: 0.9rem;}
+
+
+.all-news-container .product-text .product-text-read:hover{
+    text-decoration: underline;
+}
+@media(max-width:500px){
+    .all-news-container .product-box{
+        grid-template-columns: 1fr;
+    }
+}
+/*==FAQs=============================*/
+.faqs-page-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-width: 1100px;
+    margin: 50px auto;
+    grid-gap: 50px;
+}
+.faq-heading{
+    display: flex;
+    flex-direction: column;
+    padding-left: 46px;
+    margin-bottom: 24px;
+}
+.faq-box-container h3{
+    font-weight: 700;
+    font-size: 1.3rem;
+    color: var(--heading-color);
+    margin-bottom: 15px;
+}
+.faq-heading p{
+    font-weight: 400;
+    font-size: 13.175px;
+    line-height: 20px;
+    color: #727272;
+    max-width: 461px;
+}
+.faq-content{
+    display: grid;
+    grid-template-columns: 1.3fr 1fr;
+    width: 100%;
+    align-items: flex-start;
+}
+.faq-box{
+    padding: 10px 20px;
+    background: rgba(255, 255, 255, 0.4);
+    border: 1px solid #FFFFFF;
+    box-shadow: 14px 14px 60px rgba(59, 42, 130, 0.06);
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-bottom: 20px;
+}
+.faq-box:last-child{
+    margin-bottom: 0px;
+}
+.faq-box-question{
+    display: grid;
+    grid-template-columns: 1fr 30px;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    user-select: none;
+}
+.faq-box-question h4{
+    font-weight: 700;
+    font-size: 1rem;
+    line-height: 31px;
+    color: #464545;
+    font-weight: 600;
+}
+.faq-box-answer{
+    max-height: 0px;
+    overflow: hidden;
+    transition: all ease-in-out 0.5s;
+}
+.faq-box-answer p{
+    font-weight: 400;
+    font-size: 13.175px;
+    line-height: 20px;
+    color: #666666;
+    padding-top: 20px;
+}
+.faq-img{
+    width: 100%;
+    overflow: hidden;
+    border-radius: 27px 0px 0px 27px;
+    display: flex;
+    box-shadow: 14px 14px 60px rgba(59, 42, 130, 0.06);
+}
+.faq-box-container{
+    margin-right: 40px;
+}
+.faq-img img{
+    width: 100%;
+    object-fit: contain;
+    object-position: right;
+}
+
+.faq-box-icon{
+        display: block;
+        position: relative;
+        height: 3px;
+        transition: background 0.2s ease-out;
+        width: 23px;
+        margin-left: auto;
+    }
+    .faq-box-icon::before,
+    .faq-box-icon::after{
+        background: #000000;
+        content: '';
+        position: absolute;
+        height: 100%;
+        transition: all ease-out 0.2s;
+        width: 100%;
+        border-radius: 3px;
+    }
+
+    .faq-box-icon::before{
+        top: 0px;
+    }
+    .faq-box-icon::after{
+        transform: rotate(90deg);
+        top: 0px;
+    }
+    .faq-box-question.active .faq-box-icon::after{
+        transform: rotate(0deg);
+    }
+    @media(max-width:1200px){
+        #faq{
+            padding: 84px 0px 144px 20px;
+        }
+    }
+    @media(max-width:800px){
+        #faq{
+            padding: 84px 0px 144px 20px;
+        }
+        .faq-content{
+            grid-template-columns: 1fr;
+        }   
+        .faq-box-container{
+            margin-right: 0px;
+            padding-right: 20px;
+        }
+        .faq-img{
+            margin-top: 25px;
+        }
+    }
+    @media(max-width:724px){
+        #faq{
+            padding: 82px 0px 80px 20px;
+        }
+        .faq-img{
+            border-radius: 18.0651px 0px 0px 18.0651px;
+        }
+        .faq-heading{
+            padding: 0px 20px;
+        }
+        .faq-heading h3{
+            font-weight: 700;
+            font-size: 26.2px;
+            line-height: 33px;
+        }
+        .faq-box-question h4{
+            font-weight: 700;
+            font-size: 19px;
+            line-height: 26px;
+        }
+        .faq-box{
+            padding: 24px 21px;
+        }
+        .faq-box-icon{
+            width: 16px;
+        }
+        .faq-box-question{
+            grid-template-columns: 1fr 16px;
+        }
+        .faqs-page-container{
+            display: grid;
+            grid-template-columns: 1fr;
+        }
+    }
