--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -133,8 +133,8 @@
                 </div>
               </li>
               <li><a href="/about-us">About Us</a></li>
-              <li><a href="/faqs">FAQs</a></li>
-              <li><a href="/news">News</a></li>
+              <li><a href="/faqs/">FAQs</a></li>
+              <li><a href="/news/">News</a></li>
               <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
         </nav>
