--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -132,6 +132,7 @@
                   </div>
                 </div>
               </li>
+              <li><a href="/oemodm/">OEM/ODM</a></li>
               <li><a href="/about-us">About Us</a></li>
               <li><a href="/faqs/">FAQs</a></li>
               <li><a href="/news/">News</a></li>
