--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -111,6 +111,7 @@
             </label>
             
             <!--**menu***********-->
+            <div class="menu-container">
             <ul class="menu">
               <li><a href="/">Home</a></li>
               <li class="nav-drop-down">
@@ -138,6 +139,7 @@
               <li><a href="/news/">News</a></li>
               <li><a href="{% url 'contact' %}">Contact</a></li>
             </ul>
+          </div>
         </nav>
       </header>
 
