--- a/static/css/style.css
+++ b/static/css/style.css
@@ -280,6 +280,29 @@ header{
 .nav-drop-down{
     position: relative;
 }
+#header.fixed .header-top{
+    display: none ;
+}
+#header.fixed{
+    position: fixed;
+    left: 0px;
+    top: 0px;
+    width: 100%;
+    z-index: 100;
+    box-shadow: 2px 2px 16px rgba(0, 0, 0, 0.05);
+    animation: navanimation 0.6s;
+}
+#header.fixed nav{
+    border-bottom: none;
+}
+@keyframes navanimation{
+    0%{
+        top: -100%;
+    }
+    100%{
+        top: 0px;
+    }
+}
 @media(min-width:1000px){
 .nav-drop-down:hover .drop-collections{
     display: block;
@@ -343,17 +366,25 @@ header{
     }
     .logo img{
         max-height: 30px;}
-
-    .navigation .menu{
+    .menu-container{
         display: none;
+        flex-direction: column;
         position: absolute;
         left: 0px;
-        top:calc(100% + 1px);
+        top:calc(100%);
+        width: 100%;
+        height: calc(100vh - 150px);
+        overflow-y: auto;
+        box-shadow: 2px 22px 30px rgba(0, 0, 0, 0.05);
+    }
+    .navigation .menu{
+        display: block;
         background-color: #ffffff;
         width: 100%;
         padding: 0px;
         margin: 0px;
         box-shadow: 2px 30px 30px rgba(0,0,0,0.05);
+        overflow-y: auto;
     }
     .navigation .menu li{
         width:100%;
@@ -433,8 +464,8 @@ header{
         top: 0px;
     }
  
-    .navigation .menu-btn:checked ~ .menu{
-        display: block;
+    .navigation .menu-btn:checked ~ .menu-container{
+        display: flex;
     }
     
 }
