--- a/templates/home/search.html
+++ b/templates/home/search.html
@@ -75,7 +75,7 @@
     </div>
 
 
-    <div class="popular-product-container">
+    <div class="popular-product-container search-product-container">
         {% for product in products %}
         <!--**box***-->
         <div class="product-box">
