--- a/templates/home/category-product.html
+++ b/templates/home/category-product.html
@@ -74,7 +74,7 @@
     </div>
 
 
-    <div class="popular-product-container">
+    <div class="popular-product-container category-product-container">
         {% for product in products %}
         <!--**box***-->
         <div class="product-box">
