--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -90,7 +90,14 @@
 
               <!--search-->
               <label for="searchshow" style="color:#ffffff; cursor: pointer;"><i class="fa-solid fa-magnifying-glass"></i></label>
-              <span style="color:#ffffff; margin-left:14px; font-weight: 500; font-size: 0.8rem;">EN</span>
+              <div class="language-dropdown-container">
+                <label for="language-dropdown-check" style="cursor: pointer; color:#ffffff; margin-left:14px; font-weight: 500; font-size: 0.8rem;">EN</label>
+                <input type="checkbox" id="language-dropdown-check" value="none">
+                <div class="language-dropdown">
+                  <a href="/">English</a>
+                  <a href="https://www.bro-watch.cn">Chinese</a>
+                </div>
+              </div>
             </div>
           </div>
 
