--- a/templates/400.html
+++ b/templates/400.html
@@ -14,7 +14,7 @@
     <h1>400 - Bad Request</h1>
     <p>Bad Request, Please try another </p>
     <br>
-    <a href="{% url 'index' %}" class="go-home-btn">
+    <a href="{% url 'index' %}" aria-label="Go Back To Home Page" class="go-home-btn">
         Go Back To Home Page
     </a>
     <div>
