--- a/templates/401.html
+++ b/templates/401.html
@@ -14,7 +14,7 @@
     <h1>401 - Unauthorised</h1>
     <p>Unauthorised, Please try another </p>
     <br>
-    <a href="{% url 'index' %}" class="go-home-btn">
+    <a href="{% url 'index' %}" class="go-home-btn" aria-label="Go Back To Home Page" >
         Go Back To Home Page
     </a>
     <div>
