--- a/templates/home/contact.html
+++ b/templates/home/contact.html
@@ -22,7 +22,7 @@
 
 <section id="contact-page">
     <div class="contact-page-img">
-        <img src="{% static 'images/contact/contact_page.svg' %}" alt="">
+        <img src="{% static 'images/contact/contact_page.svg' %}" alt="contact">
     </div>
     <div class="contact-page">
         <h1>Leave Your Message</h1>
