--- a/templates/403.html
+++ b/templates/403.html
@@ -14,7 +14,7 @@
     <h1>403 - Forbidden</h1>
     <p>Forbidden, Please try another </p>
     <br>
-    <a href="{% url 'index' %}" class="go-home-btn">
+    <a href="{% url 'index' %}" class="go-home-btn" aria-label="Go Back To Home Page" >
         Go Back To Home Page
     </a>
     <div>
