--- a/templates/404.html
+++ b/templates/404.html
@@ -14,7 +14,7 @@
     <h1>404 - Page Not Found</h1>
     <p>Page not found, Please try another </p>
     <br>
-    <a href="{% url 'index' %}" class="go-home-btn">
+    <a href="{% url 'index' %}" class="go-home-btn" aria-label="Go Back To Home Page" >
         Go Back To Home Page
     </a>
     <div>
