--- a/templates/home/category-product.html
+++ b/templates/home/category-product.html
@@ -31,7 +31,7 @@
             </div>
                 <ul class="sidebar-category-menu">
                     {% for category in category  %}
-                    <li><a href="{% url 'category_detail' category.id %}">{{category.name}}</a></li>
+                    <li><a href="{% url 'category_detail' category.id %}" aria-label="{{category.name}}">{{category.name}}</a></li>
                     {% endfor %}
                 </ul>
         </div>
@@ -42,7 +42,7 @@
             </div>
             <strong>WE CAN HELP YOU</strong>
             <p>You can contact us at any way that is convenient for you. Our staffs are always online via E-mail and SMS.</p>
-            <a href="{% url 'contact' %}">Contact Us</a>
+            <a href="{% url 'contact' %}" aria-label="Contact Us">Contact Us</a>
         </div>
 
         <div class="sidebar-recent-product">
@@ -52,9 +52,9 @@
             </div>
             {% for product in recentProduct|slice:"3"  %}
             <div class="sidebar-recent-box">
-                <a href="{% url 'svg_icon_detail' product.slug %}" class="sidebar-recent-box-img"><img src="{{product.product_images.first.image.url}}" title="{{product.title}}"></a>
+                <a href="{% url 'svg_icon_detail' product.slug %}" aria-label="{{product.title}}" class="sidebar-recent-box-img"><img src="{{product.product_images.first.image.url}}" title="{{product.title}}"></a>
                 <div class="sidebar-recent-box-text">
-                    <a href="{% url 'svg_icon_detail' product.slug %}">{{product.title}}</a>
+                    <a aria-label="{{product.title}}" href="{% url 'svg_icon_detail' product.slug %}">{{product.title}}</a>
                     <span></span>
                     <span></span>
                 </div>
@@ -85,10 +85,10 @@
             <!--text-->
             <div class="product-text">
                 <!--title-->
-                <a href="{% url 'svg_icon_detail' product.slug %}" class="product-box-p-name">{{product.title}}</a>
+                <a href="{% url 'svg_icon_detail' product.slug %}"  aria-label="{{product.title}}" class="product-box-p-name">{{product.title}}</a>
                 <!--category-->
                 <span class="p-box-category">
-                    <a>{{product.category}}</a>
+                    <a href="javascript:void(0)" aria-label="{{product.category}}">{{product.category}}</a>
                 </span>
                 <!--details-->
                 <p>{{product.details}}</p>
@@ -107,13 +107,13 @@
     <!--page-number=====================-->
 <div class="page-number">
     {% if pagination.has_previous %}
-    <a href="{% url 'category_detail' categoryObj.id %}?page=1">&laquo;</a>
-    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.previous_page_number}}">Previous</a>
+    <a href="{% url 'category_detail' categoryObj.id %}?page=1" aria-label="go to first page">&laquo;</a>
+    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.previous_page_number}}" aria-label="go to previous page">Previous</a>
     {% endif %}
 
     {% if pagination.has_next %}    
-    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.next_page_number}}">Next</a>
-    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.paginator.num_pages}}">&raquo;</a>
+    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.next_page_number}}" aria-label="go to next page">Next</a>
+    <a href="{% url 'category_detail' categoryObj.id %}?page={{pagination.paginator.num_pages}}" aria-label="go to last page">&raquo;</a>
     {% endif %}
 </div>
 
